--- a/src/app/modules/admin/containers/centers/centers.component.scss
+++ b/src/app/modules/admin/containers/centers/centers.component.scss
@@ -1,325 +1,324 @@
 // @import 'styles/variables.scss';
 // @import 'styles/variables.scss';
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 @import "../../../../../styles/variables.scss";
 
 .container-center {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding-left: 123px;
+
+  .center {
+    font-size: 16px;
     width: 100%;
+    max-width: 71.0625em;
     display: flex;
     justify-content: center;
-    padding-left: 123px;
+    align-items: center;
+    flex-direction: column;
+    margin: 0 7.9375em;
 
-    .center {
-        font-size: 16px;
-        width: 100%;
-        max-width: 71.0625em;
+    .center__title {
+      font-size: 1.875rem;
+      line-height: 1.2em;
+      text-align: center;
+      color: $color-text-primary;
+      margin-top: 2.5em;
+      margin-bottom: 1.166em;
+    }
+
+    .center__container-search {
+      display: flex;
+      align-items: center;
+      align-self: flex-start;
+
+      .btn-add-center {
+        font-size: 1em;
+        text-decoration: none;
         display: flex;
-        justify-content: center;
         align-items: center;
-        flex-direction: column;
-        margin: 0 7.9375em;
+        width: 12em;
+        height: 3em;
+        background: $color-4;
+        box-shadow: 0em 0.25em 0.3125em rgba(0, 0, 0, 0.14),
+          0em 0.0625em 0.625em rgba(0, 0, 0, 0.12),
+          0em 0.125em 0.25em rgba(0, 0, 0, 0.2);
+        border-radius: 3.125em;
 
-        .center__title {
-            font-size: 1.875rem;
-            line-height: 1.2em;
-            text-align: center;
-            color: $color-text-primary;
-            margin-top: 2.5em;
-            margin-bottom: 1.166em;
+        .btn-add-center__ico {
+          width: 1.1875em;
+          margin-left: 0.75em;
+          margin-right: 0.5em;
         }
 
-        .center__container-search {
+        .btn-add-center__text {
+          font-family: "Roboto Md 500";
+          font-size: 0.875em;
+          line-height: 1.142em;
+          letter-spacing: 0.0892em;
+          color: $color-white;
+        }
+      }
+
+      .lbl-search-center {
+        display: flex;
+        align-items: center;
+
+        .lbl-search-center__input {
+          width: 32.0625em;
+          height: 2.8125em;
+          border: 0.0625em solid #979797;
+          border-radius: 0.5em;
+          margin: 0 1.875em;
+          outline-color: $color-primary-border;
+          font-size: 1em;
+          padding: 0 1.25em;
+        }
+
+        .lbl-search-center__ico {
+          width: 1.5em;
+        }
+      }
+    }
+
+    .list-center {
+      width: 100%;
+      max-width: 71.0625em;
+
+      .list-center__table {
+        margin-top: 22px;
+        max-width: 100%;
+        border-collapse: separate;
+        border-spacing: 0px 8px;
+
+        .list-center__row {
+          box-shadow: 0 2px 2px #00000040;
+          height: 48px;
+          margin-bottom: 8px;
+          padding-left: 1.5em;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+
+          .list-center__header {
+            text-align: start;
+            font-family: "Inter-700";
+            font-size: 1em;
+            line-height: 1.1875em;
+            color: #000000;
+
+            &:first-of-type {
+              padding-left: 1.5em;
+            }
+          }
+
+          .list-center__header--action {
+            width: 153px;
+          }
+
+          .list-center__cell--acction {
+            width: 153px;
+            height: 50px;
             display: flex;
             align-items: center;
-            align-self: flex-start;
 
-            .btn-add-center {
-                font-size: 1em;
-                text-decoration: none;
-                display: flex;
-                align-items: center;
-                width: 12em;
-                height: 3em;
-                background: $color-4;
-                box-shadow: 0em 0.25em 0.3125em rgba(0, 0, 0, 0.14),
-                    0em 0.0625em 0.625em rgba(0, 0, 0, 0.12),
-                    0em 0.125em 0.25em rgba(0, 0, 0, 0.2);
-                border-radius: 3.125em;
-
-                .btn-add-center__ico {
-                    width: 1.1875em;
-                    margin-left: 0.75em;
-                    margin-right: 0.5em;
-                }
-
-                .btn-add-center__text {
-                    font-family: "Roboto Md 500";
-                    font-size: 0.875em;
-                    line-height: 1.142em;
-                    letter-spacing: 0.0892em;
-                    color: $color-white;
-                }
+            .list-center__ico-action {
+              padding: 0.625em 0.625em 0.625em 0;
+              margin-right: 1.0625em;
+              cursor: pointer;
             }
 
-            .lbl-search-center {
-                display: flex;
-                align-items: center;
-
-                .lbl-search-center__input {
-                    width: 32.0625em;
-                    height: 2.8125em;
-                    border: 0.0625em solid #979797;
-                    border-radius: 0.5em;
-                    margin: 0 1.875em;
-                    outline-color: $color-primary-border;
-                    font-size: 1em;
-                    padding: 0 1.25em;
-                }
-
-                .lbl-search-center__ico {
-                    width: 1.5em;
-                }
+            .list-center__ico-action--edit {
+              margin-top: 4px;
             }
+          }
+
+          .list-center__cell {
+            font-family: "Inter" !important;
+            font-size: 1em;
+            line-height: 1.1875em;
+            color: #000000;
+
+            &:first-of-type {
+              padding-left: 1.5em;
+            }
+          }
         }
-
-        .list-center {
-            width: 100%;
-            max-width: 71.0625em;
-
-            .list-center__table {
-                margin-top: 22px;
-                max-width: 100%;
-                border-collapse: separate;
-                border-spacing: 0px 8px;
-
-                .list-center__row {
-                    box-shadow: 0 2px 2px #00000040;
-                    height: 48px;
-                    margin-bottom: 8px;
-                    padding-left: 1.5em;
-                    display: flex;
-                    justify-content: space-between;
-                    align-items: center;
-
-                    .list-center__header {
-                        text-align: start;
-                        font-family: "Inter-700";
-                        font-size: 1em;
-                        line-height: 1.1875em;
-                        color: #000000;
-
-                        &:first-of-type {
-                            padding-left: 1.5em;
-                        }
-                    }
-
-                    .list-center__header--action {
-                        width: 153px;
-                    }
-
-                    .list-center__cell--acction {
-                        width: 153px;
-                        height: 50px;
-                        display: flex;
-                        align-items: center;
-
-                        .list-center__ico-action {
-                            padding: 0.625em 0.625em 0.625em 0;
-                            margin-right: 1.0625em;
-                            cursor: pointer;
-                        }
-
-                        .list-center__ico-action--edit {
-                            margin-top: 4px;
-                        }
-                    }
-
-                    .list-center__cell {
-                        font-family: "Inter" !important;
-                        font-size: 1em;
-                        line-height: 1.1875em;
-                        color: #000000;
-
-                        &:first-of-type {
-                            padding-left: 1.5em;
-                        }
-                    }
-                }
-            }
-        }
+      }
     }
+  }
 }
 
 .modal {
-    position: fixed;
-    top: 310px;
-    z-index: 200;
-    width: 525px;
-    height: 264px;
-    background-color: #def2d6;
-    border: 1px solid #def2d6;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
-    padding-bottom: 21px;
+  position: fixed;
+  top: 310px;
+  z-index: 200;
+  width: 525px;
+  height: 264px;
+  background-color: #def2d6;
+  border: 1px solid #def2d6;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  padding-bottom: 21px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+
+  .modal__btnClose {
+    padding: 21px 12px 18px 25px;
+    width: 61px;
+    height: 70px;
+    align-self: flex-end;
+    cursor: pointer;
+  }
+
+  .modal__container {
+    width: 474px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: auto;
 
-    .modal__btnClose {
-        padding: 21px 12px 18px 25px;
-        width: 61px;
-        height: 70px;
-        align-self: flex-end;
-        cursor: pointer;
+    // margin-top: 18px;
+    .modal__ico {
+      width: 94px;
+      height: 120px;
     }
 
-    .modal__container {
-        width: 474px;
-        display: flex;
-
-        // margin-top: 18px;
-        .modal__ico {
-            width: 94px;
-            height: 120px;
-        }
-
-        .modal__text {
-            font-size: 24px;
-            text-align: center;
-            letter-spacing: 0.25px;
-            color: #154520;
-            padding-top: 40px;
-            margin-bottom: 0;
-            margin-left: 15px;
-        }
+    .modal__text {
+      font-size: 24px;
+      text-align: center;
+      letter-spacing: 0.25px;
+      color: #154520;
+      padding-top: 40px;
+      margin-bottom: 0;
+      margin-left: 15px;
     }
+  }
 }
 
 .modal-delete {
-    position: fixed;
-    top: 310px;
-    z-index: 200;
-    width: 525px;
-    height: 297px;
-    background: #f8f3d6;
-    border: 1px solid #f6f8a8;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
-    padding-bottom: 21px;
+  position: fixed;
+  top: 310px;
+  z-index: 200;
+  width: 525px;
+  height: 297px;
+  background: #f8f3d6;
+  border: 1px solid #f6f8a8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  padding-bottom: 21px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+  .modal__container-delete {
+    width: 474px;
     display: flex;
-    flex-direction: column;
+    margin-top: 58px;
     align-items: center;
+
+    .modal__ico-info {
+      width: 80px;
+      height: 82px;
+    }
+
+    .modal__text {
+      font-size: 24px;
+      text-align: center;
+      letter-spacing: 0.25px;
+      color: #936d30;
+      margin-bottom: 0;
+      margin-left: 15px;
+      line-height: 40px;
+    }
+  }
+
+  .modal__options {
+    width: 100%;
+    display: flex;
     justify-content: space-between;
+    padding-left: 95px;
+    padding-right: 29px;
 
+    .btn-modal__cancel {
+      width: 168px;
+      height: 59px;
+      background: #e2d9a4;
+      color: #083d5e;
+      border: 1px solid #083d5e;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      border-radius: 35px;
+      font-size: 20px;
+      transition: $transition;
+      cursor: pointer;
 
-    .modal__container-delete {
-        width: 474px;
-        display: flex;
-        margin-top: 58px;
-        align-items: center;
-
-        .modal__ico-info {
-            width: 80px;
-            height: 82px;
-        }
-
-        .modal__text {
-            font-size: 24px;
-            text-align: center;
-            letter-spacing: 0.25px;
-            color: #936d30;
-            margin-bottom: 0;
-            margin-left: 15px;
-            line-height: 40px;
-        }
+      &:hover {
+        background: #f1efe0;
+      }
     }
 
-    .modal__options {
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        padding-left: 95px;
-        padding-right: 29px;
+    .btn-modal__accept {
+      width: 168px;
+      height: 59px;
+      color: #e60d0d;
+      background: #e2d9a4;
+      border: 1px solid #c70f0f;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      border-radius: 35px;
+      font-size: 16px;
+      padding: 0 20px;
+      transition: $transition;
+      cursor: pointer;
 
-        .btn-modal__cancel {
-            width: 168px;
-            height: 59px;
-            background: #e2d9a4;
-            color: #083d5e;
-            border: 1px solid #083d5e;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-            border-radius: 35px;
-            font-size: 20px;
-            transition: $transition;
-            cursor: pointer;
-
-            &:hover {
-                background: #f1efe0;
-            }
-        }
-
-        .btn-modal__accept {
-            width: 168px;
-            height: 59px;
-            color: #e60d0d;
-            background: #e2d9a4;
-            border: 1px solid #c70f0f;
-            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-            border-radius: 35px;
-            font-size: 16px;
-            padding: 0 20px;
-            transition: $transition;
-            cursor: pointer;
-
-            &:hover {
-                background: #f1efe0;
-            }
-        }
+      &:hover {
+        background: #f1efe0;
+      }
     }
+  }
 }
 
 @media (max-width: 1400px) {
-    .container-axes {
-        justify-content: none;
+  .container-axes {
+    justify-content: none;
 
-        .axes {
-            margin-right: 4.375em;
-            margin-left: 7.9375em;
+    .axes {
+      margin-right: 4.375em;
+      margin-left: 7.9375em;
 
-            .axes__title {
-                margin-top: 40px;
-                padding-right: 57px; //centra el titulo alineado con el logo del header
-            }
-        }
+      .axes__title {
+        margin-top: 40px;
+        padding-right: 57px; //centra el titulo alineado con el logo del header
+      }
     }
+  }
 
-    .modal-delete {
-        top: 222px;
-    }
+  .modal-delete {
+    top: 222px;
+  }
 
-    .modal {
-        top: 222px;
-    }
+  .modal {
+    top: 222px;
+  }
 }
 
 @media (max-width: 768px) {
-    .container-axes {
-        .axes {
-            font-size: 0.875em;
-            margin-left: 7em;
+  .container-axes {
+    .axes {
+      font-size: 0.875em;
+      margin-left: 7em;
 
-            .axes__title {
-                padding-right: 135.75px;
-            }
-        }
+      .axes__title {
+        padding-right: 135.75px;
+      }
     }
+  }
 
-    .modal-delete {
-        top: 200px;
-    }
+  .modal-delete {
+    top: 200px;
+  }
 
-    .modal {
-        top: 200px;
-    }
+  .modal {
+    top: 200px;
+  }
 }
