--- a/src/app/modules/admin/containers/axes/axes.component.scss
+++ b/src/app/modules/admin/containers/axes/axes.component.scss
@@ -174,8 +174,8 @@
   z-index: 200;
   width: 525px;
   height: 297px;
-  background: #f8f3d6;
-  border: 1px solid #f6f8a8;
+  background: #fdff9a;
+  border: 1px solid rgba(253, 255, 154, 0.98);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   padding-bottom: 21px;
@@ -196,7 +196,7 @@
       font-size: 24px;
       text-align: center;
       letter-spacing: 0.25px;
-      color: #936d30;
+      color: #a06b15;
       margin-bottom: 0;
       margin-left: 15px;
       line-height: 40px;
@@ -211,7 +211,7 @@
     .btn-modal__cancel {
       width: 168px;
       height: 59px;
-      background: #e2d9a4;
+      background: #ffffff;
       color: #083d5e;
       border: 1px solid #083d5e;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -219,15 +219,12 @@
       font-size: 20px;
       transition: $transition;
       cursor: pointer;
-      &:hover {
-        background: #f1efe0;
-      }
     }
     .btn-modal__accept {
       width: 168px;
       height: 59px;
       color: #e60d0d;
-      background: #e2d9a4;
+      background: #ffffff;
       border: 1px solid #c70f0f;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       border-radius: 35px;
@@ -235,9 +232,6 @@
       padding: 0 20px;
       transition: $transition;
       cursor: pointer;
-      &:hover {
-        background: #f1efe0;
-      }
     }
   }
 }
