Style: cambia colores de modal alerta de eliminar en los tres abm
Cambio solicitado por el equipo ux se ajustan los nuevos colores de los modales de eliminar item

--- a/src/app/core/layouts/components/navbar/navbar.component.scss
+++ b/src/app/core/layouts/components/navbar/navbar.component.scss
@@ -132,7 +132,7 @@
     font-size: 14px;
     top: 145px;
   }
-  .modal-delete {
+  .modal-logout {
     top: 222px;
   }
 }
@@ -141,7 +141,7 @@
     font-size: 12px;
     top: 115px;
   }
-  .modal-delete {
+  .modal-logout {
     top: 200px;
   }
 }
