--- a/src/app/modules/admin/containers/centers/centers.component.scss
+++ b/src/app/modules/admin/containers/centers/centers.component.scss
@@ -202,8 +202,8 @@
   z-index: 200;
   width: 525px;
   height: 297px;
-  background: #f8f3d6;
-  border: 1px solid #f6f8a8;
+  background: #fdff9a;
+  border: 1px solid rgba(253, 255, 154, 0.98);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   padding-bottom: 21px;
@@ -211,40 +211,35 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-
   .modal__container-delete {
     width: 474px;
     display: flex;
     margin-top: 58px;
     align-items: center;
-
     .modal__ico-info {
       width: 80px;
       height: 82px;
     }
-
     .modal__text {
       font-size: 24px;
       text-align: center;
       letter-spacing: 0.25px;
-      color: #936d30;
+      color: #a06b15;
       margin-bottom: 0;
       margin-left: 15px;
       line-height: 40px;
     }
   }
-
   .modal__options {
     width: 100%;
     display: flex;
     justify-content: space-between;
     padding-left: 95px;
     padding-right: 29px;
-
     .btn-modal__cancel {
       width: 168px;
       height: 59px;
-      background: #e2d9a4;
+      background: #ffffff;
       color: #083d5e;
       border: 1px solid #083d5e;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -252,17 +247,12 @@
       font-size: 20px;
       transition: $transition;
       cursor: pointer;
-
-      &:hover {
-        background: #f1efe0;
-      }
     }
-
     .btn-modal__accept {
       width: 168px;
       height: 59px;
       color: #e60d0d;
-      background: #e2d9a4;
+      background: #ffffff;
       border: 1px solid #c70f0f;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       border-radius: 35px;
@@ -270,23 +260,18 @@
       padding: 0 20px;
       transition: $transition;
       cursor: pointer;
-
-      &:hover {
-        background: #f1efe0;
-      }
     }
   }
 }
-
 @media (max-width: 1400px) {
-  .container-axes {
+  .container-center {
     justify-content: none;
 
-    .axes {
+    .center {
       margin-right: 4.375em;
       margin-left: 7.9375em;
 
-      .axes__title {
+      .center__title {
         margin-top: 40px;
         padding-right: 57px; //centra el titulo alineado con el logo del header
       }
@@ -303,12 +288,12 @@
 }
 
 @media (max-width: 768px) {
-  .container-axes {
-    .axes {
+  .container-center {
+    .center {
       font-size: 0.875em;
       margin-left: 7em;
 
-      .axes__title {
+      .center__title {
         padding-right: 135.75px;
       }
     }
