--- a/src/app/modules/admin/containers/axes/axes.component.scss
+++ b/src/app/modules/admin/containers/axes/axes.component.scss
@@ -72,6 +72,10 @@
     .list-axes {
       width: 100%;
       max-width: 71.0625em;
+      padding-bottom: 50px;
+      display: flex;
+      flex-direction: column;
+
       .list-axes__table {
         margin-top: 22px;
         max-width: 100%;
@@ -120,6 +124,26 @@
             color: #000000;
             &:first-of-type {
               padding-left: 1.5em;
+            }
+          }
+        }
+      }
+      .pagination {
+        display: flex;
+        align-items: center;
+        align-self: flex-end;
+        .pagination-text {
+          font-size: 17px;
+          margin: 0;
+        }
+        .pagination-arrow {
+          width: 34px;
+          height: 38px;
+          padding: 6px 4px;
+          cursor: pointer;
+          &:hover {
+            path {
+              fill: $color-bg-hover-primary;
             }
           }
         }
