--- a/src/app/modules/admin/containers/reports/reports.component.html
+++ b/src/app/modules/admin/containers/reports/reports.component.html
@@ -1,1 +1,98 @@
-p reports
+<section class="container-reports">
+    <div class="reports">
+        <h1 class="reports__title">Reportes Enviados</h1>
+        <div class="reports__container-search">
+            <a class="btn-add-reports" style="cursor: pointer" (click)="create()">
+                <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor"
+                    class="bi bi-layout-text-sidebar-reverse btn-add-reports__ico " viewBox="0 0 16 16">
+                    <path
+                        d="M12.5 3a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1h5zm0 3a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1h5zm.5 3.5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h5a.5.5 0 0 0 .5-.5zm-.5 2.5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1h5z" />
+                    <path
+                        d="M16 2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2zM4 1v14H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h2zm1 0h9a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5V1z" />
+                </svg>
+                <span class="btn-add-reports__text"> CREAR REPORTE </span>
+            </a>
+            <label for="searchAxes" class="lbl-search-reports">
+                <input class="lbl-search-reports__input" id="searchAxes" type="text" [(ngModel)]="numero"
+                    (ngModelChange)="busca($event)" autocomplete="off" spellcheck="false" />
+                <img class="lbl-search-reports__ico" src="../../../../../assets/icons/Search.svg"
+                    alt="Icono de lupa para busqueda" />
+            </label>
+        </div>
+        <section class="list-reports">
+            <div class="list-reports__table">
+                <!-- Position Column -->
+                <div class="list-reports__row">
+                    <div class="list-reports__header">Numero</div>
+                    <div class="list-reports__header">Fecha de creacion</div>
+                    <div class="list-reports__header list-reports__header--action">
+                        Acciones
+                    </div>
+                </div>
+
+                <div class="list-reports__row" *ngFor="let element of reports">
+                    <div class="list-reports__cell list-reports__cell--reports">
+                        {{ element.numero}}
+                    </div>
+                    <div class="list-reports__cell list-reports__cell--reports list-reports__cell--reportsmiddle">
+                        {{ element.fechaCreacion | date: 'dd/MM/yyyy'}}
+                    </div>
+                    <div class="list-reports__cell list-reports__cell--acction">
+                        <a>
+                            <img class="list-reports__ico-action" src="../../../../../assets/icons/arrows-angle-expand.svg"
+                                alt="Icono de vizualizar" matTooltip="Vizualizar" />
+                        </a>
+                        <a (click)="edit(element)">
+                            <img class="list-reports__ico-action list-reports__ico-action--edit"
+                                src="../../../../../assets/icons/Pencil.svg" alt="Icono de editar"
+                                matTooltip="Editar" />
+                        </a>
+                        <a>
+                            <img class="list-reports__ico-action" src="../../../../../assets/icons/bookmarks.svg"
+                                alt="Icono de duplicar" matTooltip="Duplicar" />
+                        </a>
+                        <img class="list-reports__ico-action" src="../../../../../assets/icons/Trash.svg"
+                            alt="icono de Eliminar" matTooltip="Borrar" (click)="onClickDelete(element.id)" />
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+
+    <!-- <div *ngIf="flagNew" class="modal">
+        <img class="modal__btnClose" (click)="close()" src="../../../../../assets/icons/X.svg" alt="icono de cerrar" />
+        <div class="modal__container">
+            <img class="modal__ico" src="../../../../../assets/icons/Check.svg" alt="icon check" />
+            <p class="modal__text">
+                ¡El Usuario {{ data.nombreUsuario }} fue creado con éxito!
+            </p>
+        </div>
+    </div>
+
+    <div *ngIf="flagEdited" class="modal">
+        <img class="modal__btnClose" (click)="close()" src="../../../../../assets/icons/X.svg" alt="icono de cerrar" />
+        <div class="modal__container">
+            <img class="modal__ico" src="../../../../../assets/icons/Check.svg" alt="icon check" />
+            <p class="modal__text">
+                ¡El Usuario {{ data.nombreUsuario }} fue editado con éxito!
+            </p>
+        </div>
+    </div>
+
+    <div *ngIf="flagDelete" class="modal-delete">
+        <div class="modal__container-delete">
+            <img class="modal__ico-info" src="../../../../../assets/icons/Exclamation-triangle.svg"
+                alt="Icono de información" />
+            <p class="modal__text">
+                ¡Estas a punto de eliminar este dato!<br />Esta acción no podrá ser
+                revertida
+            </p>
+        </div>
+        <div class="modal__options">
+            <button class="btn-modal__cancel" (click)="close()">Cancelar</button>
+            <button class="btn-modal__accept" (click)="deleteUser()">
+                Confirmar y eliminar
+            </button>
+        </div>
+    </div> -->
+</section>
