Refactor: cambia icono en boton agregar centro
cambia icono correspondiente al diseño de ux

--- a/src/app/modules/admin/containers/centers/centers.component.scss
+++ b/src/app/modules/admin/containers/centers/centers.component.scss
@@ -50,6 +50,7 @@
           width: 1.1875em;
           margin-left: 0.75em;
           margin-right: 0.5em;
+          color: white;
         }
 
         .btn-add-center__text {
