--- a/src/app/modules/admin/containers/users/users.component.html
+++ b/src/app/modules/admin/containers/users/users.component.html
@@ -3,28 +3,19 @@
     <h1 class="user__title">Usuarios</h1>
     <div class="user__container-search">
       <a class="btn-add-user" style="cursor: pointer" (click)="create()">
-        <img
-          class="btn-add-user__ico"
-          src="../../../../../assets/icons/List ol.svg"
-          alt="Icono de lista ordenada"
-        />
+        <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor"
+          class="bi bi-person-plus-fill btn-add-user__ico" viewBox="0 0 16 16">
+          <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
+          <path fill-rule="evenodd"
+            d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z" />
+        </svg>
         <span class="btn-add-user__text"> AGREGAR USUARIO </span>
       </a>
       <label for="searchAxes" class="lbl-search-user">
-        <input
-          class="lbl-search-user__input"
-          id="searchAxes"
-          type="text"
-          [(ngModel)]="usuario"
-          (ngModelChange)="busca($event)"
-          autocomplete="off"
-          spellcheck="false"
-        />
-        <img
-          class="lbl-search-user__ico"
-          src="../../../../../assets/icons/Search.svg"
-          alt="Icono de lupa para busqueda"
-        />
+        <input class="lbl-search-user__input" id="searchAxes" type="text" [(ngModel)]="usuario"
+          (ngModelChange)="busca($event)" autocomplete="off" spellcheck="false" />
+        <img class="lbl-search-user__ico" src="../../../../../assets/icons/Search.svg"
+          alt="Icono de lupa para busqueda" />
       </label>
     </div>
     <section class="list-user">
@@ -42,27 +33,16 @@
           <div class="list-user__cell list-user__cell--user">
             {{ element.nombre }}
           </div>
-          <div
-            class="list-user__cell list-user__cell--user list-user__cell--usermiddle"
-          >
+          <div class="list-user__cell list-user__cell--user list-user__cell--usermiddle">
             {{ centroAsignado(element) }}
           </div>
           <div class="list-user__cell list-user__cell--acction">
             <a (click)="edit(element)">
-              <img
-                class="list-user__ico-action list-user__ico-action--edit"
-                src="../../../../../assets/icons/Pencil.svg"
-                alt="Icono de editar"
-                matTooltip="Editar"
-              />
+              <img class="list-user__ico-action list-user__ico-action--edit"
+                src="../../../../../assets/icons/Pencil.svg" alt="Icono de editar" matTooltip="Editar" />
             </a>
-            <img
-              class="list-user__ico-action"
-              src="../../../../../assets/icons/Trash.svg"
-              alt="icono de Eliminar"
-              matTooltip="Borrar"
-              (click)="onClickDelete(element.id)"
-            />
+            <img class="list-user__ico-action" src="../../../../../assets/icons/Trash.svg" alt="icono de Eliminar"
+              matTooltip="Borrar" (click)="onClickDelete(element.id)" />
           </div>
         </div>
       </div>
@@ -70,18 +50,9 @@
   </div>
 
   <div *ngIf="flagNew" class="modal">
-    <img
-      class="modal__btnClose"
-      (click)="close()"
-      src="../../../../../assets/icons/X.svg"
-      alt="icono de cerrar"
-    />
+    <img class="modal__btnClose" (click)="close()" src="../../../../../assets/icons/X.svg" alt="icono de cerrar" />
     <div class="modal__container">
-      <img
-        class="modal__ico"
-        src="../../../../../assets/icons/Check.svg"
-        alt="icon check"
-      />
+      <img class="modal__ico" src="../../../../../assets/icons/Check.svg" alt="icon check" />
       <p class="modal__text">
         ¡El Usuario {{ data.nombreUsuario }} fue creado con éxito!
       </p>
@@ -89,18 +60,9 @@
   </div>
 
   <div *ngIf="flagEdited" class="modal">
-    <img
-      class="modal__btnClose"
-      (click)="close()"
-      src="../../../../../assets/icons/X.svg"
-      alt="icono de cerrar"
-    />
+    <img class="modal__btnClose" (click)="close()" src="../../../../../assets/icons/X.svg" alt="icono de cerrar" />
     <div class="modal__container">
-      <img
-        class="modal__ico"
-        src="../../../../../assets/icons/Check.svg"
-        alt="icon check"
-      />
+      <img class="modal__ico" src="../../../../../assets/icons/Check.svg" alt="icon check" />
       <p class="modal__text">
         ¡El Usuario {{ data.nombreUsuario }} fue editado con éxito!
       </p>
@@ -109,11 +71,8 @@
 
   <div *ngIf="flagDelete" class="modal-delete">
     <div class="modal__container-delete">
-      <img
-        class="modal__ico-info"
-        src="../../../../../assets/icons/Exclamation-triangle.svg"
-        alt="Icono de información"
-      />
+      <img class="modal__ico-info" src="../../../../../assets/icons/Exclamation-triangle.svg"
+        alt="Icono de información" />
       <p class="modal__text">
         ¡Estas a punto de eliminar este dato!<br />Esta acción no podrá ser
         revertida
