--- a/src/app/modules/admin/containers/users/users.component.scss
+++ b/src/app/modules/admin/containers/users/users.component.scss
@@ -47,6 +47,7 @@
           width: 1.1875em;
           margin-left: 0.75em;
           margin-right: 0.5em;
+          color: white;
         }
 
         .btn-add-user__text {
