--- a/src/app/modules/admin/containers/am-user/am-user.component.html
+++ b/src/app/modules/admin/containers/am-user/am-user.component.html
@@ -3,20 +3,14 @@
     <h1 *ngIf="data.editar">Editar Usuario</h1>
     <form [formGroup]="formUpEdit">
         <section class="container-name">
-            <label for="">Nombre y Apellido *</label>
+            <label>Nombre y Apellido *</label>
             <input type="text" formControlName="nombre" [(ngModel)]="nombre">
             <mat-error *ngIf="formUpEdit.controls['nombre'].invalid && formUpEdit.controls['nombre'].dirty">
                 <span *ngIf="formUpEdit.controls['nombre'].errors">Requerido</span>
             </mat-error>
         </section>
-        <section class="container-select">
-            <label for="">Centro</label>
-            <mat-select [(value)]="centroAsignado" name="centros" (selectionChange)="capturarCentro($event.value)">
-                <mat-option [value]="item.id" *ngFor="let item of centros">{{item.nombre}}</mat-option>
-            </mat-select>
-        </section>
         <section class="container-user">
-            <label for="">Usuario (direccion de email)*</label>
+            <label>Usuario (direccion de email)*</label>
             <input type="text" formControlName="email" [(ngModel)]="email">
 
             <mat-error *ngIf="formUpEdit.controls['email'].invalid && formUpEdit.controls['email'].dirty">
@@ -25,14 +19,34 @@
             </mat-error>
         </section>
         <section class="container-password">
-            <label for="">Contraseña (al menos 8 caracteres) *</label>
+            <label>Contraseña (al menos 8 caracteres) *</label>
             <input type="password" formControlName="contrasena" [(ngModel)]="contrasena">
             <mat-error *ngIf="formUpEdit.controls['contrasena'].invalid && formUpEdit.controls['contrasena'].dirty">
                 <span *ngIf="formUpEdit.controls['contrasena'].hasError('required')">Requerido</span>
                 <span *ngIf="formUpEdit.controls['contrasena'].hasError('minLength')">Minimo 8 caracteres</span>
             </mat-error>
         </section>
-        <button *ngIf="!data.editar" [disabled]="formUpEdit.invalid" mat-button (click)="confirm(formUpEdit.value)">Confirmar</button>
-        <button *ngIf="data.editar" [disabled]="formUpEdit.invalid" mat-button (click)="editar(formUpEdit.value)">Confirmar</button>
+        <section >
+            <label>Tipo de Rol</label>
+            <div class="container-checkbox">
+                <mat-radio-group [(ngModel)]="rol">
+                    <label>Director de Centro  </label>
+                    <mat-radio-button class="mat-radio-button mat-radio-button-centro" formControlName="rol" value="centro"></mat-radio-button>
+                    <br>
+                    <label>Director de ONG (admin) </label>
+                    <mat-radio-button  class="mat-radio-button" formControlName="rol" value="ong"></mat-radio-button>
+                </mat-radio-group>
+            </div>
+        </section>
+        <section *ngIf="flagTipoRol" class="container-select">
+            <label>Centro</label>
+            <mat-select [(value)]="centroAsignado" name="centros" (selectionChange)="capturarCentro($event.value)">
+                <mat-option [value]="item.id" *ngFor="let item of centros">{{item.nombre}}</mat-option>
+            </mat-select>
+        </section>
+        <button *ngIf="!data.editar" [disabled]="formUpEdit.invalid" mat-button
+            (click)="confirm(formUpEdit.value)">Confirmar</button>
+        <button *ngIf="data.editar" [disabled]="formUpEdit.invalid" mat-button
+            (click)="editar(formUpEdit.value)">Confirmar</button>
     </form>
 </div>
