Feat: agrega dato de tipo de rol
Este muestra el rol que cumple el usuario

--- a/src/app/modules/admin/containers/users/users.component.html
+++ b/src/app/modules/admin/containers/users/users.component.html
@@ -20,6 +20,7 @@
                 <div class="list-user__row">
                     <div class="list-user__header">Usuario</div>
                     <div class="list-user__header">CentroAsignado</div>
+                    <div class="list-user__header">Tipo de Rol</div>
                     <div class="list-user__header list-user__header--action">
                         Acciones
                     </div>
@@ -31,6 +32,9 @@
                     </div>
                     <div class="list-user__cell list-user__cell--user">
                         {{ centroAsignado(element)}}
+                    </div>
+                    <div class="list-user__cell list-user__cell--user">
+                        {{tipoRol(element.rolNombre)}}
                     </div>
                     <div class="list-user__cell list-user__cell--acction">
                         <a (click)="edit(element)">
