Style: Agrega padding left en home para que se centre al header
esta alineacion la tienen todos los componentes

--- a/src/app/modules/admin/containers/home/home.component.scss
+++ b/src/app/modules/admin/containers/home/home.component.scss
@@ -4,6 +4,7 @@
   align-items: center;
   flex-direction: column;
   width: 100%;
+  padding-left: 123px;
   .home__title {
     font-size: 4em;
     line-height: 1.2em;
