Refactor: agrega routerlink hacia pantalla de variables agrupadas del eje

--- a/src/app/modules/admin/containers/variables/variables.component.html
+++ b/src/app/modules/admin/containers/variables/variables.component.html
@@ -42,6 +42,7 @@
         <div
           class="list-variables__row list-variables__row--click"
           *ngFor="let element of listOfVariables_toShow | async"
+          [routerLink]="['variables-agrupadas/', element.id.toString()]"
         >
           <p class="list-variables__cell list-variables__cell--axe">
             {{ element.nombre }}
